// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AutoSuggest component should allow the user to navigate with the keyboard 1`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  highlightQuery=""
  legendTitle=""
  numberOfSuggestions={6}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "persist": [MockFunction],
            "target": Object {
              "value": "d",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
        "total_results": 6,
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
        "total_results": 5,
      },
    ]
  }
>
  <form
    className="auto-suggest"
    data-test="search-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <Component
        expanded={false}
        inputProps={
          Object {
            "autoCapitalize": "off",
            "autoComplete": "off",
            "autoCorrect": "off",
            "data-test": "search-input",
            "id": "auto-suggest__input",
            "label": "",
            "placeholder": "",
          }
        }
        onBlur={[Function]}
        onOpenSearchBarToggle={[Function]}
        onSuggestionSelection={[Function]}
        openSearchBarToggle={false}
        searchBarProps={
          Object {
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "value": "dam",
          }
        }
        suggestions={
          Array [
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
              "total_results": 6,
            },
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
              "total_results": 5,
            },
          ]
        }
      >
        <div>
          <input
            id="auto-suggest__input"
            type="text"
          />
        </div>
      </Component>
    </fieldset>
  </form>
</AutoSuggest>
`;

exports[`The AutoSuggest component should allow the user to navigate with the keyboard 2`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "category": "Monumenten",
      "index": 3,
      "label": "Damrak 1",
      "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
    }
  }
  highlightQuery="dam"
  legendTitle=""
  numberOfSuggestions={6}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "persist": [MockFunction],
            "target": Object {
              "value": "d",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
        "total_results": 6,
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
        "total_results": 5,
      },
    ]
  }
>
  <form
    className="auto-suggest"
    data-test="search-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <Component
        expanded={false}
        inputProps={
          Object {
            "autoCapitalize": "off",
            "autoComplete": "off",
            "autoCorrect": "off",
            "data-test": "search-input",
            "id": "auto-suggest__input",
            "label": "",
            "placeholder": "",
          }
        }
        onBlur={[Function]}
        onOpenSearchBarToggle={[Function]}
        onSuggestionSelection={[Function]}
        openSearchBarToggle={false}
        searchBarProps={
          Object {
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "value": "dam",
          }
        }
        suggestions={
          Array [
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
              "total_results": 6,
            },
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
              "total_results": 5,
            },
          ]
        }
      >
        <div>
          <input
            id="auto-suggest__input"
            type="text"
          />
        </div>
      </Component>
    </fieldset>
  </form>
</AutoSuggest>
`;

exports[`The AutoSuggest component should toggle the "showsuggestions" state on focus and blur of the input field 1`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  highlightQuery=""
  legendTitle=""
  numberOfSuggestions={0}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "persist": [MockFunction],
            "target": Object {
              "value": "d",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
        "total_results": 6,
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
        "total_results": 5,
      },
    ]
  }
>
  <form
    className="auto-suggest"
    data-test="search-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <Component
        expanded={false}
        inputProps={
          Object {
            "autoCapitalize": "off",
            "autoComplete": "off",
            "autoCorrect": "off",
            "data-test": "search-input",
            "id": "auto-suggest__input",
            "label": "",
            "placeholder": "",
          }
        }
        onBlur={[Function]}
        onOpenSearchBarToggle={[Function]}
        onSuggestionSelection={[Function]}
        openSearchBarToggle={false}
        searchBarProps={
          Object {
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "value": "dam",
          }
        }
        suggestions={
          Array [
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
              "total_results": 6,
            },
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
              "total_results": 5,
            },
          ]
        }
      >
        <div>
          <input
            id="auto-suggest__input"
            type="text"
          />
        </div>
      </Component>
    </fieldset>
  </form>
</AutoSuggest>
`;

exports[`The AutoSuggest component should toggle the "showsuggestions" state on focus and blur of the input field 2`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  highlightQuery=""
  legendTitle=""
  numberOfSuggestions={0}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "persist": [MockFunction],
            "target": Object {
              "value": "d",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
        "total_results": 6,
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
        "total_results": 5,
      },
    ]
  }
>
  <form
    className="auto-suggest"
    data-test="search-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <Component
        expanded={false}
        inputProps={
          Object {
            "autoCapitalize": "off",
            "autoComplete": "off",
            "autoCorrect": "off",
            "data-test": "search-input",
            "id": "auto-suggest__input",
            "label": "",
            "placeholder": "",
          }
        }
        onBlur={[Function]}
        onOpenSearchBarToggle={[Function]}
        onSuggestionSelection={[Function]}
        openSearchBarToggle={false}
        searchBarProps={
          Object {
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "value": "dam",
          }
        }
        suggestions={
          Array [
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
              "total_results": 6,
            },
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
              "total_results": 5,
            },
          ]
        }
      >
        <div>
          <input
            id="auto-suggest__input"
            type="text"
          />
        </div>
      </Component>
    </fieldset>
  </form>
</AutoSuggest>
`;

exports[`The AutoSuggest component should toggle the "showsuggestions" state on focus and blur of the input field 3`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  highlightQuery=""
  legendTitle=""
  numberOfSuggestions={0}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "persist": [MockFunction],
            "target": Object {
              "value": "d",
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
        "total_results": 6,
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
        "total_results": 5,
      },
    ]
  }
>
  <form
    className="auto-suggest"
    data-test="search-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <Component
        expanded={false}
        inputProps={
          Object {
            "autoCapitalize": "off",
            "autoComplete": "off",
            "autoCorrect": "off",
            "data-test": "search-input",
            "id": "auto-suggest__input",
            "label": "",
            "placeholder": "",
          }
        }
        onBlur={[Function]}
        onOpenSearchBarToggle={[Function]}
        onSuggestionSelection={[Function]}
        openSearchBarToggle={false}
        searchBarProps={
          Object {
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyDown": [Function],
            "value": "dam",
          }
        }
        suggestions={
          Array [
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
              "total_results": 6,
            },
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
              "total_results": 5,
            },
          ]
        }
      >
        <div>
          <input
            id="auto-suggest__input"
            type="text"
          />
        </div>
      </Component>
    </fieldset>
  </form>
</AutoSuggest>
`;
